[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Character.gd" type="Script" id=1]
[ext_resource path="res://src/CharacterHUD.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0862745, 0.866667, 0.501961, 0.705882 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.247059 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0862745, 0.552941, 0.866667, 0.705882 )

[node name="Character" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 1.5, 0 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="HUD" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
script = ExtResource( 2 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="HUD"]

[node name="Control" type="Control" parent="HUD"]
margin_left = -75.0
margin_top = -50.0
margin_right = 75.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="HUD/Control"]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 35.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerBar" type="ProgressBar" parent="HUD/Control"]
margin_top = 35.0
margin_right = 150.0
margin_bottom = 49.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetingHighlight" type="ColorRect" parent="HUD/Control"]
visible = false
margin_right = 150.0
margin_bottom = 20.0
color = Color( 0.866667, 0.0862745, 0.0862745, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="Label" parent="HUD/Control"]
margin_right = 150.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.996078, 0.992157, 0.992157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "..."
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target" type="Label" parent="HUD/Control"]
margin_top = -20.0
margin_right = 150.0
margin_bottom = -6.0
custom_colors/font_color = Color( 0.917647, 0.882353, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineOfSitePoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
